design issue fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,8 @@
     <!-- this is the main profile section -->
     <main class="hero-container" id="Home">
         <div class="left-container">
-            <h2>This is Kabila</h2>
-            <h1>I'm a <span class="typed-text"></span></h1></h1>
+            <h2>This is <span>Kabila</span></h2>
+            <h1>I'm a <span class="typed-text"></span></h1>
             <!-- <h1>Ux Designer</h1> -->
             <p>👩‍💻A versatile developer skilled in building  full-stack applications, <br>from front-end to back-end infrastructure. With expertise in both <br>software development and manual testing, ensures seamless functionality <br>through detailed test planning and bug tracking 🐞. </p>
             <div class="social_links">
@@ -80,7 +80,7 @@
         </div>
         <div class="right-container">
            <div class="profile">
-            <img src="assests/profile-image.jpeg" alt="profile">
+            <img src="/assests/profile-image.jpeg" alt="profile">
            </div>
         </div>
      
