--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
         </div>
         <div class="right-container">
            <div class="profile">
-            <img src="/assests/profile-image.jpeg" alt="profile">
+            <img src="assests/profile-image.jpeg" alt="profile">
            </div>
         </div>
      
