new css file aded

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="respon.css">
     
 </head>
 <body>
@@ -31,7 +31,7 @@
             <ul class="items">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#skill">Skill</a></li>
-                <li><a href="#Edu-Exp">Education & Experience</a></li>
+                <li><a href="#Edu-Exp">Qualification</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!-- <button class="gradient-button">Hire Me!</button> -->
@@ -206,27 +206,27 @@
     <div class="contact-me-section">
         <div class="icons">
     <div class="icondiv">
-        <img src="assets/phone-call.png" alt="phone" srcset="">
+        <i class="fa-solid fa-phone"></i>
     </div>
     <div class="icondiv">
-        <img src="assets/mail.png" alt="mail" srcset="">
+        <i class="fa-regular fa-envelope"></i>
     </div>
     <div class="icondiv">
-        <img src="assets/location.png" alt="loc" srcset="">
+        <i class="fa-solid fa-location-dot"></i>
     </div>
         </div>
         <div class="description">
             <div class="desc">
-                <p>Phone</p>
-                <h4>+8754198598</h4>
+                <h3>Phone</h3>
+                <h5>+8754198598</h5>
             </div>
             <div class="desc">
-                <p>Email</p>
-                <h4>kabila2301@gmail.com</h4>
+                <h3>Email</h3>
+                <h5>kabila2301@gmail.com</h5>
             </div>
             <div class="desc">
-                <p>Address</p>
-                <h4>11/11 A Agasthiyar Street Sadayappapuram,Mukkudal-627601,Tirunelveli</h4>
+                <h3>Address</h3>
+                <h5>11/11 A Agasthiyar Street Sadayappapuram,Mukkudal-627601,Tirunelveli</h5>
             </div>
         </div>
 
